# flash-browser-detector

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  apriltag_quads.c  build.sh  glitter-tag.html  index.html  lightanchor_demo.c  lightanchor_detector.c  lightanchor_detector.h  opencv_demo.cc  package-lock.json  package.json  squares.cpp  webcam_lightanchors.cpp  webcam_quads.cpp  webpack.config.js
emscripten/: flash_wasm.c  flash_wasm.cpp  glitter_wasm.c
examples/: apriltag_demo.c  lightanchor_demo.c  webcam_lightanchors.cpp  webcam_quads.cpp
flash/: decoder.c  decoder.h  lightanchor.c  lightanchor.h  lightanchor_detector.c  lightanchor_detector.h  linked_list.h  queue_buf.c  queue_buf.h
glitter/: bit_match.c  bit_match.h  decoder.c  decoder.h  lightanchor.c  lightanchor.h  lightanchor_detector.c  lightanchor_detector.h  linked_list.h  queue_buf.c  queue_buf.h
html/: glitterDetector.js  index.html  index.js  lightanchor.js  main.js  style.css  tag.html
html/2D/: index.html  index.js  style.css
html/3D/: index.html  index.js
html/480p/: index.html  index.js
html/aframe/: index.html  index.js
html/ar/: index.js
html/fast/: index.html  index.js
html/js/: index.js
html/tag/: lightanchor.js  tag-apriltag.html  tag.html  tags.html
html/threejs/: index.html  index.js
js/: flash-detector.js  flash-module.js  flash-source.js  flash.worker.js  gl-utils.js  glitter-detector.js  glitter-lib.js  glitter-module.js  glitter-source.js  glitter.worker.js  glitter_wasm.js  glitter_wasm.wasm  grayscale.js  imu.js  index.js  locate-file.js  postprocessor.js  preprocessor.js  timer.js
js/shaders/: flip-image.glsl  grayscale-blur.glsl  grayscale.glsl  vertex-shader.glsl
js/utils/: fast-promise.js  gl-utils.js  timer.js  utils.js
wasm/: CMakeLists.txt  glitter_wasm.c
